--- a/README
+++ b/README
@@ -6,4 +6,4 @@ Do not push any generated status.html/index.html/changes.rss in this git reposit
 
 Please use manage.py to perform all management to the status page.
 
-For more info, please see the documentation at: http://infrastructure.fedoraproject.org/infra/docs/status-fedora.rst
+For more info, please see the documentation at: http://fedora-infra-docs.readthedocs.io/en/latest/sysadmin-guide/sops/status-fedora.html
