koji outage over
Signed-off-by: Kevin Fenzi <kevin@scrye.com>

--- a/content/resolved/2022-11-16-koji-db.md
+++ b/content/resolved/2022-11-16-koji-db.md
@@ -8,3 +8,7 @@ We have rebooted it, but load is not coming back under control.
 We are intestigating the loading issues. Until them koji and associated
 applications (bodhi, etc) will be slow or down. 
 
+The database issues seem to have been caused by a large number of 
+expensive database queries coming from a remote ip. We have blocked this
+ip address and brought everything back up. We will look further 
+for mitigation of this sort of issue moving forward.
