--- a/content/resolved/2023-11-17-pagure-io.md
+++ b/content/resolved/2023-11-17-pagure-io.md
@@ -5,3 +5,5 @@ Ticket: 11626
 Switches in the datacenter where pagure.io is will be updated and rebooted.
 There will be a short outage sometime during the outage window and
 during this time pagure.io will not be reachable.
+
+This upgrade was completed.
