Koji is enabled, outage is resolved
Signed-off-by: Samyak Jain <samyak.jn11@gmail.com>

--- a/content/resolved/2024-02-13-koji.md
+++ b/content/resolved/2024-02-13-koji.md
@@ -8,3 +8,5 @@ that time for the rawhide will be canceled and can be resubmitted by maintainers
 after the branching.
 
 Once Fedora Linux 40 is branched we will reenable builds in Koji.
+
+F40 is branched, koji is enabled now, should be back up and processing now.
