CentOS may be affected by the DC move
Signed-off-by: Patrik Polakovič <patrik@alphamail.org>

--- a/content/ongoing/2025-06-30-dc-move.md
+++ b/content/ongoing/2025-06-30-dc-move.md
@@ -17,3 +17,4 @@ Many services have been migrated, but there's still a number to bring up and val
 Tomorrow the buildsystem (koji) and related services will be migrated, then will we
 work to bring everything on line. Thanks again for everyone's patience during this move.
 
+Please be aware that CentOS infrastructure may be affected by the move as well.
