add an update - 2025-07-02 2utc
Signed-off-by: Kevin Fenzi <kevin@scrye.com>

--- a/content/ongoing/2025-06-30-dc-move.md
+++ b/content/ongoing/2025-06-30-dc-move.md
@@ -18,3 +18,31 @@ Tomorrow the buildsystem (koji) and related services will be migrated, then will
 work to bring everything on line. Thanks again for everyone's patience during this move.
 
 Please be aware that CentOS Stream infrastructure may be affected by the move as well.
+
+Update 2025-07-02 2:30UTC:
+
+We have migrated all our data and deployed all instances in the new datacenter,
+and now it's just a matter of bringing everything back online.
+
+More services are back online, including:
+src.fedoraproject.org
+wiki
+authentication
+matrix bots
+openshift cluster consoles
+fasjson
+elections
+fmn
+accounts
+mote
+lists/mailman
+rabbitmq clusters
+registry
+downloads
+...and others.
+
+Unfortunately today we hit some network issues and were not able to bring koji
+back up. It should be back after some firewall changes tomorrow we hope.
+After that we plan to bring up the entire build/sign/compose pipeline as well
+as all the remaining applications.
+
